fix: AnswerNodeDataConverterTest