@@ -13,19 +13,17 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.alibaba.cloud.ai.service.dsl.nodes;
 
+import com.alibaba.cloud.ai.model.VariableSelector;
 import com.alibaba.cloud.ai.model.workflow.NodeType;
 import com.alibaba.cloud.ai.model.workflow.nodedata.AnswerNodeData;
 import com.alibaba.cloud.ai.service.dsl.AbstractNodeDataConverter;
 import com.alibaba.cloud.ai.service.dsl.DSLDialectType;
+import com.alibaba.cloud.ai.utils.StringTemplateUtil;
 import org.springframework.stereotype.Component;
 
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.*;
 import java.util.stream.Stream;
 
 @Component
@@ -38,49 +36,55 @@ public class AnswerNodeDataConverter extends AbstractNodeDataConverter<AnswerNod
 
 	@Override
 	protected List<DialectConverter<AnswerNodeData>> getDialectConverters() {
-		return Stream.of(AnswerNodeDataConverter.AnswerNodeConverter.values())
-			.map(AnswerNodeDataConverter.AnswerNodeConverter::dialectConverter)
-			.collect(Collectors.toList());
+		return Stream.of(AnswerNodeDialectConverter.values())
+				.map(AnswerNodeDialectConverter::dialectConverter)
+				.toList();
 	}
 
-	private enum AnswerNodeConverter {
+	private enum AnswerNodeDialectConverter {
 
 		DIFY(new DialectConverter<>() {
 			@Override
+			public Boolean supportDialect(DSLDialectType dialectType) {
+				return DSLDialectType.DIFY.equals(dialectType);
+			}
+
+			@Override
 			public AnswerNodeData parse(Map<String, Object> data) {
-				AnswerNodeData nd = new AnswerNodeData();
-				nd.setAnswer((String) data.get("answer"));
+				String difyTmpl = (String) data.get("answer");
+				List<String> variables = new ArrayList<>();
+				String tmpl = StringTemplateUtil.fromDifyTmpl(difyTmpl, variables);
+				List<VariableSelector> inputs = variables.stream().map(variable -> {
+					String[] splits = variable.split("\\.", 2);
+					return new VariableSelector(splits[0], splits[1]);
+				}).toList();
 				String nodeId = (String) data.get("id");
 				String outputKey = (String) data.getOrDefault("output_key", nodeId + "_output");
+
+				AnswerNodeData nd = new AnswerNodeData(inputs, AnswerNodeData.DEFAULT_OUTPUTS).setAnswer(tmpl);
 				nd.setOutputKey(outputKey);
 				return nd;
 			}
 
 			@Override
-			public Map<String, Object> dump(AnswerNodeData nd) {
-				Map<String, Object> m = new LinkedHashMap<>();
-				if (nd.getAnswer() != null) {
-					m.put("answer", nd.getAnswer());
-				}
-				return m;
-			}
-
-			@Override
-			public Boolean supportDialect(DSLDialectType dialect) {
-				return DSLDialectType.DIFY.equals(dialect);
+			public Map<String, Object> dump(AnswerNodeData nodeData) {
+				Map<String, Object> data = new HashMap<>();
+				String difyTmpl = StringTemplateUtil.toDifyTmpl(nodeData.getAnswer());
+				data.put("answer", difyTmpl);
+				return data;
 			}
 		}),
 
-		CUSTOM(defaultCustomDialectConverter(AnswerNodeData.class));
+		CUSTOM(AbstractNodeDataConverter.defaultCustomDialectConverter(AnswerNodeData.class));
 
-		private final DialectConverter<AnswerNodeData> converter;
-
-		AnswerNodeConverter(DialectConverter<AnswerNodeData> converter) {
-			this.converter = converter;
-		}
+		private final DialectConverter<AnswerNodeData> dialectConverter;
 
 		public DialectConverter<AnswerNodeData> dialectConverter() {
-			return converter;
+			return dialectConverter;
+		}
+
+		AnswerNodeDialectConverter(DialectConverter<AnswerNodeData> dialectConverter) {
+			this.dialectConverter = dialectConverter;
 		}
 
 	}
